2007-03-29  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* fileRepository.c: 
	Fixed 1690029: sfcb file repository failure on long directory names,
	Invalid buffer allocation size corrected now.

	* sfcbrepos.sh.in: 
	Fixed 1690026: sfcb repository build fails if no "global" MOF found.
	The missing of all-namespace MOFs in the staging area is now
	handled benignly.

2007-03-29  Sven Schuetz <sven@de.ibm.com>

	* provMgr.c:
	Fixed 1690518: not all indication providers are invoked

2007-03-28  Sven Schuetz <sven@de.ibm.com>

	* sfcBroker.c, cimslp.c:
	Fixed 1689953: slp agent lacks proper signal handling

2007-03-23  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* cimXmlParser.c, cimXmlRequest.c: 
	Fixed 1686696: sfcb XML parsing failures not indicated to client
	Removed exit() in yyerror, generate (i)methodresponse errors
	for XML parsing errors.

2007-03-23  Sven Schuetz

	* value.c, queryOperation.h, objectpath.c, instance.c,
	queryOperation.c, objectpath.h, instance.h, Makefile.am:
	Fixed 1686170:instance comparision in queries do not work as expected

2007-03-20  Sven Schuetz

	* queryParser.y, selectexp.c:
	2nd fix for 1674999: fixed memory corruption and leak in query statement.

2007-03-16  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* args.c, array.c, context.c, instance.c, native.h, objectpath.c,
	value.c:
	Fixed 1682388: sfcb too picky about CMPIValue * alignment.
	The places were CMPIValues are copied now use a common function which
	ensures that the data copies are performed in an aligned way.

2007-03-16  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* indCIMXMLExport.c: 
	Fixed 1682045: compile failure with gcc 4.1.3

	* providerMgr.c: 
	Fixed 1677195: crash in provider manager trace on x86_64.

	* cimcClientSfcbLocal.c, constClass.c, constClass.h, instance.c: 
	Implemented 1443861: support for local clients.
	It was necessary to implement invokeMethod and